# UltimateMacros

./: .gitignore  LICENSE  bat_backup  main.py  order_test.ins  pyproject.toml  readme.md  render.py  render2.py  requirements.txt  test.ins  test.py  text_map_macro.py
.github/workflows/: python-unittest.yml  update_instruction_docs.yml
base_macro/: base_macro.py  helper_classes.py  input_collector.py  input_presser.py  signal_interfaces.py
console_prompt/: PenroseDrawer.py  __init__.py  console_main.py  goto.py  macro.py  tool.py
docs/: guidelines.md  instructions.md
firefox_handling/: wikamp.py
macro_files/: aaa.ins  abc.ins  change_variable.ins  coin_demo.ins  terminate_itself.ins
macro_files/repeater/: -1.ins
macros/: clipboard_macro.py  text_map_macro.py
profile_files/: dev.json
question_copier/: dhcp.txt  question_copier_macro.py  test.txt
reference_images/: cas_open.txt  firefox_loading_website.txt  firefox_minimized.txt  notepad_icon.txt  wikamp_attendance_button.txt  wikamp_open.txt
repeater/: __init__.py  interpreter.py  interpreter_macro.py  recorder.py  recorder_macro.py  repeater_macro.py
screen_match/: __init__.py  capturer.py  matcher.py  screen_match.py
scripts/: generate_docs.py
src/: __init__.py
src/base_macro/: __init__.py  base_macro.py  helper_classes.py  input_collector.py  input_presser.py
src/console_prompt/: PenroseDrawer.py  console_base.py  console_main.py  console_toolbar.py  goto.py  macro.py  miscellaneous.py  numpy_printer.py  profile_reader.py  tool.py
tools/: preview_window.py  screenshot_preview.py
(+86 files in other folders)
