[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ultimate-macros"

dependencies = [
    'pillow~=12.3.0',
    'pyperclip~=1.11.0',
    'pynput~=1.8.2',
    'numpy~=2.5.1',
    'opencv-python~=5.0.0.93',
    'mss~=10.2.0',
    'prompt_toolkit~=3.0.52'
]

dynamic = [
  'version'
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = 'no-guess-dev'
local_scheme = 'no-local-version'